--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -18,7 +18,7 @@ pipeline {
             steps {
                 script {
                     def tfHome = tool name: 'Terraform'
-                    env.PATH = "${tfHome}:${env.PATH}"
+                    withEnv(["PATH=/usr/local/bin:$env.PATH"])
                 }
                 sh 'echo $SVC_ACCOUNT_KEY | base64 -d > ./VM-VPC/terraform.json'
 		sh 'pwd'
