--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -45,7 +45,7 @@ pipeline {
 			 {
                 //sh 'terraform $TF_ACTION $TF_APPROVE'
 				 //sh 'terraform plan'
-				 sh 'terraform apply --auto-approve'
+				 sh 'terraform destroy --auto-approve'
 			 }
 		 }
 	}
