--- a/VM-VPC/Jenkinsfile
+++ b/VM-VPC/Jenkinsfile
@@ -43,9 +43,9 @@ pipeline {
 		 steps {  
 			  dir('VM-VPC')
 			 {
-                //sh 'terraform $TF_ACTION $TF_APPROVE'
+                sh 'terraform $TF_ACTION $TF_APPROVE'
 				 //sh 'terraform plan'
-				 sh 'terraform destroy --auto-approve'
+				 //sh 'terraform destroy --auto-approve'
 			 }
 		 }
 	}
